istio-task/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: soham
  labels:
    istio-injection: enabled
