istio-task/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: soham
spec:
  selector:
    app: backend
  ports:
  - protocol: TCP
    port: 4000
    targetPort: 4000
